cicd/cd/platform/manifests/overlays/coralogix-demo-create-order-audit.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coralogix-demo-create-order-audit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coralogix-demo-create-order-audit
  template:
    metadata:
      labels:
        app: coralogix-demo-create-order-audit
    spec:
      containers:
        - name: OVERLOADED_DURING_KUSTOMIZATION
          ports:
            - containerPort: 8089
---
apiVersion: v1
kind: Service
metadata:
  name: coralogix-demo-create-order-audit
spec:
  selector:
    app: coralogix-demo-create-order-audit
  ports:
    - protocol: TCP
      port: 8089
      targetPort: 8089
  type: ClusterIP
