cicd/cd/platform/manifests/overlays/coralogix-demo-create-order-command.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coralogix-demo-create-order-command
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coralogix-demo-create-order-command
  template:
    metadata:
      labels:
        app: coralogix-demo-create-order-command
    spec:
      containers:
        - name: OVERLOADED_DURING_KUSTOMIZATION
          ports:
            - containerPort: 8088
---
apiVersion: v1
kind: Service
metadata:
  name: coralogix-demo-create-order-command
spec:
  selector:
    app: coralogix-demo-create-order-command
  ports:
    - protocol: TCP
      port: 8088
      targetPort: 8088
  type: ClusterIP
